# sordec

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  PHASE_1.md  PHASE_2.md  PHASE_3.md  README.md  SCORING_METRIC.md
crates/sordec-backend/: Cargo.toml
crates/sordec-backend/src/: error.rs  lib.rs
crates/sordec-backend/src/wat/: anchor.rs  annotate.rs  banner.rs  corpus_tests.rs  extract.rs  facts.rs  mod.rs  print.rs
crates/sordec-backend/tests/: wat_gates.rs  wat_smoke.rs
crates/sordec-backend/tests/common/: mod.rs
crates/sordec-cli/: Cargo.toml
crates/sordec-cli/src/: coverage.rs  diagnostics.rs  main.rs  pretty.rs  pretty_hir.rs
crates/sordec-cli/tests/: coverage.rs  decompile.rs  dump_facts.rs  dump_hir.rs  dump_ir.rs  dump_wat.rs  point4_semantic_recovery.rs  score.rs
crates/sordec-common/: Cargo.toml
crates/sordec-common/src/: arena.rs  diagnostic.rs  ids.rs  lib.rs  provenance.rs  unknown.rs
crates/sordec-driver/: Cargo.toml
crates/sordec-driver/src/: driver.rs  lib.rs
crates/sordec-driver/tests/: corpus.rs  coverage_matrix.rs  driver_run.rs
crates/sordec-driver/tests/common/: mod.rs
crates/sordec-frontend/: Cargo.toml
crates/sordec-frontend/src/: error.rs  lib.rs  metadata.rs  wasm.rs
crates/sordec-frontend/tests/: parse.rs  point1_wasm_facts.rs  point2_soroban_facts.rs
crates/sordec-ir/: Cargo.toml
crates/sordec-ir/src/: lib.rs  memory.rs  validate.rs  wasm_facts.rs
crates/sordec-ir/src/high/: expr.rs  mod.rs  region.rs  semantic.rs  storage.rs  ty.rs
crates/sordec-ir/src/lifted/: mod.rs  op.rs  terminator.rs
crates/sordec-passes/: Cargo.toml
crates/sordec-passes/src/: effects.rs  error.rs  interfaces.rs  ledger.rs  lib.rs  lift.rs  lowering.rs  metrics_catalog.rs  pass.rs  pipeline.rs  test_util.rs  treeify.rs  type_infer.rs  val_abi.rs
crates/sordec-passes/src/dataflow/: cfg.rs  const_prop.rs  def_use.rs  frame_facts.rs  high.rs  high_uses.rs  inline_plan.rs  mod.rs  trace_bytes.rs  trace_const.rs
crates/sordec-passes/src/declutter/: merge_chains.rs  mod.rs  prune_phis.rs  resolve_aliases.rs  sweep_dead.rs  thread_jumps.rs
crates/sordec-passes/src/host_calls/: VENDORED_FROM  mod.rs
crates/sordec-passes/src/lowering/: lift_to_high.rs  mod.rs
crates/sordec-passes/src/recognizers/: abi_sweep.rs  auth.rs  auth_flow.rs  client_call.rs  collections.rs  const_prop.rs  context.rs  cross_contract.rs  dispatcher.rs  enum_key.rs  linear_memory.rs  mod.rs  storage.rs  symbols.rs  ttl.rs  unrecognized.rs  val_encoding.rs  wrappers.rs
crates/sordec-passes/src/refine/: and_merge.rs  dispatch_link.rs  guard_clause.rs  loop_classify.rs  mod.rs  panic_recover.rs  polarity.rs  switch_dedup.rs  trap_inline.rs
crates/sordec-passes/src/structuring/: census.rs  classify.rs  mod.rs  stats.rs  walk.rs
crates/sordec-passes/tests/: cfg_oracle.rs  declutter_corpus.rs  lift.rs  opcode_census.rs  point3_lifted_ir.rs  point4_host_call_catalog.rs  structuring_corpus.rs
crates/sordec-passes/tests/common/: mod.rs
crates/sordec-score/: Cargo.toml
crates/sordec-score/src/: canon.rs  compile.rs  error.rs  extract.rs  facts.rs  interface.rs  lib.rs  loader.rs  metrics.rs  report.rs  semantic.rs  simil.rs  structure.rs
crates/sordec-score/tests/: calibration.rs  freeze.rs
docs/: Sordec-Phase1-Architecture.md  architecture.md  proposal_draft.md  timeline_and_budget.md
learning/experiments/01-hello-add-recovered/src/: lib.rs
learning/experiments/01-hello-add/decompiled/: annotated.wat  report.json
learning/experiments/02-counter/: Cargo.toml
learning/experiments/02-counter-recovered/src/: lib.rs
learning/experiments/02-counter-v26/: Cargo.toml
learning/experiments/02-counter/decompiled/: annotated.wat  report.json
learning/experiments/02-counter/src/: lib.rs
samples/contracts/: README.md
samples/contracts/attestation/: BUILD.md  attestation.wasm  attestation.wasm.sha256  build.sh
samples/contracts/attestation/source/: Cargo.toml  VENDORED_FROM  rust-toolchain.toml
samples/contracts/attestation/source/src/: lib.rs
samples/contracts/dex-liquidity-pool/: BUILD.md  README.md  build.sh  dex-liquidity-pool.wasm  dex-liquidity-pool.wasm.sha256
samples/contracts/dex-liquidity-pool/source/: Cargo.toml  VENDORED_FROM  rust-toolchain.toml
samples/contracts/hello-add/: BUILD.md  README.md  build.sh  hello-add.wasm  hello-add.wasm.sha256
samples/contracts/hello-add/source/: Cargo.toml  rust-toolchain.toml
samples/contracts/hello-add/source/src/: lib.rs
samples/contracts/timelock/: BUILD.md  README.md  build.sh  timelock.wasm  timelock.wasm.sha256
samples/contracts/timelock/source/: Cargo.toml  VENDORED_FROM
samples/contracts/token-v22/: BUILD.md  README.md  build.sh  token-v22.wasm  token-v22.wasm.sha256
samples/contracts/token-v22/source/: Cargo.toml  VENDORED_FROM  rust-toolchain.toml
samples/contracts/token-v23/: BUILD.md  README.md  build.sh  token-v23.wasm.sha256
samples/contracts/token-v23-stripped/: BUILD.md  README.md  build.sh  token-v23-stripped.wasm  token-v23-stripped.wasm.sha256
samples/contracts/token-v23-stripped/source/: Cargo.toml  VENDORED_FROM  rust-toolchain.toml
samples/contracts/token-v23/source/: VENDORED_FROM
testing/: TRANCHE_1_FINAL_REPORT.md
testing/point-1-wasm-facts/: README.md  REPORT.md  RUNBOOK.md  SCENARIO_MATRIX.md
testing/point-2-soroban-facts/: README.md  REPORT.md  RUNBOOK.md  SCENARIO_MATRIX.md
testing/point-3-lifted-ir/: README.md  REPORT.md  RUNBOOK.md  SCENARIO_MATRIX.md
testing/point-4-semantic-recovery/: README.md  REPORT.md  RUNBOOK.md  SCENARIO_MATRIX.md
tools/: gate.sh  generate_phase1_architecture_pdf.py  verify-fixtures.sh
