[workspace]
resolver = "2"
members = [
    "crates/sordec-common",
    "crates/sordec-ir",
    "crates/sordec-frontend",
    "crates/sordec-passes",
    "crates/sordec-backend",
    "crates/sordec-driver",
    "crates/sordec-cli",
]
# Vendored fixture sources under `samples/contracts/<name>/source/` are
# self-contained crates pinned to specific soroban-sdk + rustc versions for
# reproducible WASM. They are NOT part of our build — `cargo build --workspace`
# must skip them, and a `cargo` invocation from inside a fixture's `source/`
# directory must not adopt this workspace as its parent. The exclude here is
# belt-and-braces with each fixture's own empty `[workspace]` declaration.
exclude = ["samples"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
authors = ["Imran Shaikh"]
repository = "https://github.com/Imran-S-heikh/sordec"
description = "Soroban WASM-to-Rust decompiler"

[workspace.dependencies]
# Internal crates — referenced by path within the workspace
sordec-common   = { path = "crates/sordec-common" }
sordec-ir       = { path = "crates/sordec-ir" }
sordec-frontend = { path = "crates/sordec-frontend" }
sordec-passes   = { path = "crates/sordec-passes" }
sordec-backend  = { path = "crates/sordec-backend" }
sordec-driver   = { path = "crates/sordec-driver" }

# External crates — pinned to exact versions we've validated
wasmparser    = "0.240"
wasmprinter   = "0.240"
wat           = "1.240"
waffle        = "0.2.0"
soroban-spec  = "25.3.0"
soroban-meta  = "25.3.0"
stellar-xdr   = { version = "=25.0.0", default-features = false, features = ["curr", "std"] }
syn           = { version = "2.0", features = ["full"] }
quote         = "1.0"
proc-macro2   = "1.0"
prettyplease  = "0.2"
thiserror     = "2.0"
serde         = { version = "1.0", features = ["derive"] }
serde_json    = "1.0"
clap          = { version = "4.5", features = ["derive"] }

# CLI integration testing — used only as a dev-dependency from
# `crates/sordec-cli/tests/`. Pulled into the workspace so the version
# pin lives in one place.
assert_cmd    = "2.0"
predicates    = "3.1"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

# Workspace-wide lint policy.
#
# Locked-in conventions for sordec — see docs/architecture.md §11 and the
# Task 1.2 plan. Every member crate inherits these via `[lints] workspace = true`.
[workspace.lints.rust]
# We never need raw unsafe; if we ever do, an explicit `#[allow(unsafe_code)]`
# at the call site forces a code-review checkpoint.
unsafe_code = "deny"
# Public items must be documented. Type-only crates without doc comments are
# unreviewable; this turns each `///` into a contract.
missing_docs = "deny"

[workspace.lints.clippy]
# `dbg!` printing in release code is always a mistake. Forbidden so that
# the legacy `format!("{op:?}").split(...)` style of opcode-name extraction
# can never sneak back in via debug formatting.
dbg_macro = "deny"
# `print!`/`println!`/`eprintln!` go through the project's diagnostic
# infrastructure (later); raw stdout in library crates is a smell.
print_stdout = "warn"
print_stderr = "warn"
# `todo!()` is fine in scaffolding but should never reach a release.
todo = "warn"
