[package]
name = "sordec-cli"
description = "Command-line interface for sordec"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "sordec"
path = "src/main.rs"

[dependencies]
sordec-common.workspace = true
sordec-driver.workspace = true
clap.workspace = true

[lints]
workspace = true
