[package]
name = "sordec-cli"
description = "Command-line interface for sordec"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "sordec"
path = "src/main.rs"

[dependencies]
sordec-common.workspace = true
sordec-driver.workspace = true
sordec-frontend = { workspace = true, features = ["serde"] }
sordec-ir = { workspace = true, features = ["serde"] }
sordec-passes.workspace = true
clap.workspace = true
serde_json.workspace = true
# `waffle` is needed by the pretty-printer to pattern-match
# `waffle::Operator::Call` (we render imported-function calls
# differently from default operators). `waffle::Func` is also matched.
waffle.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true

[lints]
workspace = true
