[package]
name = "sordec-ir"
description = "Typed intermediate representations (WASM IR, Lifted IR, High IR)"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
sordec-common.workspace = true
waffle.workspace = true
serde = { workspace = true, optional = true }

[dev-dependencies]
serde_json.workspace = true

[features]
default = []
serde = ["dep:serde", "sordec-common/serde"]

[lints]
workspace = true
