[package]
name = "sordec-passes"
description = "Analysis and transformation passes over the IR"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
sordec-common.workspace = true
sordec-ir.workspace = true
waffle.workspace = true
thiserror.workspace = true

[dev-dependencies]
sordec-frontend.workspace = true

[lints]
workspace = true
