[package]
name = "sordec-passes"
description = "Analysis and transformation passes over the IR"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
sordec-common.workspace = true
sordec-ir.workspace = true
waffle.workspace = true
thiserror.workspace = true
# `serde` + `serde_json` parse the vendored `host_calls/env.json`
# catalog at first lookup. Non-feature-gated because the catalog is
# unconditional — every consumer of `sordec-passes` benefits from
# host-call resolution.
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

[dev-dependencies]
sordec-frontend.workspace = true
# The structuring skeleton cross-check (C4) rescans the original code
# section as an oracle independent of both waffle and our lift.
wasmparser.workspace = true

[lints]
workspace = true
